--- a/hands.html
+++ b/hands.html
@@ -497,10 +497,24 @@
     </footer>
     <!-- Footer Ends -->
 
+    <!-- Cursor Starts -->
+    <div class="cursor"></div>
+    <div class="cursor-follower"></div>
+    <!-- Cursor Ends -->
+
     <!-- Font Awesome CDN -->
     <script src="https://kit.fontawesome.com/321abfd063.js" crossorigin="anonymous"></script>
     <!-- WOW JS -->
     <script src="assets/vendors/wow-js/wow.min.js"></script>
+    <!-- jQuery CDN -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <!-- gsap cdn -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"
+        integrity="sha512-cdV6j5t5o24hkSciVrb8Ki6FveC2SgwGfLE31+ZQRHAeSRxYhAQskLkq3dLm8ZcWe1N3vBOEYmmbhzf7NTtFFQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <!-- TweenMax JS -->
+    <script src="assets/vendors/tweenmax/tweenmax.js"></script>
     <!-- Bootstrap JS -->
     <script src="assets/vendors/bootstrap/bootstrap.bundle.min.js"></script>
     <!-- Main Script -->
