--- a/index.html
+++ b/index.html
@@ -201,8 +201,10 @@
         <div class="container text-center">
             <div class="row align-items-center">
                 <div class="col-md-6">
-                    <img src="assets/images/home/face.png" alt="Surgical Category"
-                        class="img-fluid categories__image animated wow fadeInLeft">
+                    <div class="categories__image">
+                        <img src="assets/images/home/face.png" alt="Surgical Category"
+                        class="img-fluid animated wow fadeInLeft">
+                    </div>
                 </div>
                 <div class="col-md-6">
                     <div class="categories__inner animated wow fadeInRight">
@@ -225,8 +227,10 @@
 
             <div class="row align-items-center">
                 <div class="col-md-6 order-0 order-md-1">
-                    <img src="assets/images/home/breast.png" alt="Surgical Categories"
-                        class="img-fluid categories__image animated wow fadeInRight">
+                    <div class="categories__image">
+                        <img src="assets/images/home/breast.png" alt="Surgical Categories"
+                            class="img-fluid animated wow fadeInRight">
+                    </div>
                 </div>
                 <div class="col-md-6 order-1 order-md-0">
                     <div class="categories__inner animated wow fadeInLeft">
@@ -250,8 +254,10 @@
 
             <div class="row align-items-center">
                 <div class="col-md-6">
-                    <img src="assets/images/home/tummyTuck.png" alt="Surgical Categories"
-                        class="img-fluid categories__image animated wow fadeInLeft">
+                    <div class="categories__image">
+                        <img src="assets/images/home/tummyTuck.png" alt="Surgical Categories"
+                            class="img-fluid animated wow fadeInLeft">
+                    </div>
                 </div>
                 <div class="col-md-6">
                     <div class="categories__inner animated wow fadeInRight">
@@ -279,8 +285,10 @@
 
             <div class="row align-items-center">
                 <div class="col-md-6 order-md-1">
-                    <img src="assets/images/home/moreSurgical.png" alt="Surgical Categories"
-                        class="img-fluid categories__image animated wow fadeInRight">
+                    <div class="categories__image">
+                        <img src="assets/images/home/moreSurgical.png" alt="Surgical Categories"
+                            class="img-fluid animated wow fadeInRight">
+                    </div>
                 </div>
                 <div class="col-md-6 order-md-0">
                     <div class="categories__inner animated wow fadeInLeft">
@@ -304,8 +312,10 @@
 
             <div class="row align-items-center">
                 <div class="col-md-6">
-                    <img src="assets/images/home/nonSurgical.png" alt="Surgical Categories"
-                        class="img-fluid categories__image animated wow fadeInLeft">
+                    <div class="categories__image">
+                        <img src="assets/images/home/nonSurgical.png" alt="Surgical Categories"
+                            class="img-fluid animated wow fadeInLeft">
+                    </div>
                 </div>
                 <div class="col-md-6">
                     <div class="categories__inner animated wow fadeInRight">
@@ -328,8 +338,10 @@
 
             <div class="row align-items-center">
                 <div class="col-md-6 order-md-1">
-                    <img src="assets/images/home/hair.png" alt="Surgical Categories"
-                        class="img-fluid categories__image animated wow fadeInRight">
+                    <div class="categories__image">
+                        <img src="assets/images/home/hair.png" alt="Surgical Categories"
+                    class="img-fluid animated wow fadeInRight">
+                    </div>
                 </div>
                 <div class="col-md-6 order-md-0">
                     <div class="categories__inner animated wow fadeInLeft">
@@ -352,8 +364,10 @@
 
             <div class="row align-items-center">
                 <div class="col-md-6">
-                    <img src="assets/images/home/injectables.png" alt="Surgical Categories"
-                        class="img-fluid categories__image animated wow fadeInLeft">
+                    <div class="categories__image">
+                        <img src="assets/images/home/injectables.png" alt="Surgical Categories"
+                    class="img-fluid animated wow fadeInLeft">
+                    </div>
                 </div>
                 <div class="col-md-6">
                     <div class="categories__inner animated wow fadeInRight">
@@ -376,8 +390,10 @@
 
             <div class="row align-items-center">
                 <div class="col-md-6 order-md-1">
-                    <img src="assets/images/home/reconstruction.png" alt="Surgical Categories"
-                        class="img-fluid categories__image animated wow fadeInRight">
+                    <div class="categories__image">
+                        <img src="assets/images/home/reconstruction.png" alt="Surgical Categories"
+                            class="img-fluid animated wow fadeInRight">
+                    </div>
                 </div>
                 <div class="col-md-6 order-md-0">
                     <div class="categories__inner animated wow fadeInLeft">
@@ -401,8 +417,10 @@
 
             <div class="row align-items-center">
                 <div class="col-md-6">
-                    <img src="assets/images/home/emergency.png" alt="Surgical Categories"
-                        class="img-fluid categories__image animated wow fadeInLeft">
+                    <div class="categories__image">
+                        <img src="assets/images/home/emergency.png" alt="Surgical Categories"
+                            class="img-fluid animated wow fadeInLeft">
+                    </div>
                 </div>
                 <div class="col-md-6">
                     <div class="categories__inner animated wow fadeInRight">
@@ -426,11 +444,14 @@
 
             <div class="row align-items-center">
                 <div class="col-md-6 order-md-1">
-                    <img src="assets/images/home/hand.png" alt="Surgical Categories"
-                        class="img-fluid categories__image animated wow fadeInRight">
+                    <div class="categories__image">
+                        <img src="assets/images/home/hand.png" alt="Surgical Categories"
+                            class="img-fluid categories__image animated wow fadeInRight">
+                    </div>
                 </div>
                 <div class="col-md-6 order-md-0">
                     <div class="categories__inner animated wow fadeInLeft">
+                        <div class="animation__one"></div>
                         <h2>Hand</h2>
                         <p>
                             Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
@@ -448,7 +469,38 @@
                     </div>
                 </div>
             </div>
+
+            <div class="blob">
+                <svg viewBox="0 0 500 500" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="100%" id="blobSvg">
+                    <defs>
+                      <linearGradient id="gradient" x1="0%" y1="0%" x2="0%" y2="100%">
+                        <stop offset="0%" style="stop-color: #F4D1AE;"></stop>
+                        <stop offset="100%" style="stop-color: #FAF6F2;"></stop>
+                      </linearGradient>
+                    </defs>
+                    <path id="blob" d="M270,356Q128,462,136.5,265Q145,68,278.5,159Q412,250,270,356Z" fill="url(#gradient)"></path>
+                </svg>
+            </div>
         </div>
+        <div class="cube"></div>
+        <div class="cube"></div>
+        <div class="cube"></div>
+        <div class="cube"></div>
+        <div class="cube"></div>
+        <div class="cube"></div>
+
+        <ul class="bg-bubbles">
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
     </section>
     <!-- Categories Ends -->
 
@@ -609,8 +661,10 @@
             <div class="row">
                 <div class="col-12">
                     <div class="footer__logo position-absolute">
-                        <img src="assets/images/footerLogo.png" alt="PSNY Footer Logo"
-                            class="img-fluid animated wow fadeInUp">
+                        <a href="index.html">
+                            <img src="assets/images/footerLogo.png" alt="PSNY Footer Logo"
+                                class="img-fluid animated wow fadeInUp">
+                        </a>
                         <span class="animated wow fadeInUp">
                             Plastic Surgery
                             <br>
@@ -718,10 +772,24 @@
     </footer>
     <!-- Footer Ends -->
 
+    <!-- Cursor Starts -->
+    <div class="cursor"></div>
+    <div class="cursor-follower"></div>
+    <!-- Cursor Ends -->
+
     <!-- WOW JS -->
     <script src="assets/vendors/wow-js/wow.min.js"></script>
     <!-- Font Awesome CDN -->
     <script src="https://kit.fontawesome.com/321abfd063.js" crossorigin="anonymous"></script>
+    <!-- jQuery CDN -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <!-- gsap cdn -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"
+        integrity="sha512-cdV6j5t5o24hkSciVrb8Ki6FveC2SgwGfLE31+ZQRHAeSRxYhAQskLkq3dLm8ZcWe1N3vBOEYmmbhzf7NTtFFQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <!-- TweenMax JS -->
+    <script src="assets/vendors/tweenmax/tweenmax.js"></script>
     <!-- Bootstrap JS -->
     <script src="assets/vendors/bootstrap/bootstrap.bundle.min.js"></script>
     <!-- Main Script -->
